added contractCustomer tests